--- a/.github/workflows/yocto-build-deploy.yml
+++ b/.github/workflows/yocto-build-deploy.yml
@@ -4,7 +4,7 @@ on:
   workflow_call:
     secrets:
       BALENA_API_KEY:
-        description: balena API key for deploying releases
+        description: balena API key for deploying releases # TODO: Different for staging and prod - add another Secret for staging key
         required: false
       DOCKERHUB_USER:
         description: Dockerhub user for pulling private helper images
@@ -86,6 +86,16 @@ on:
         required: false
         type: boolean
         default: false
+      aws_iam_role:
+        description: IAM role to assume for s3 permissions
+        required: false
+        type: string
+        default: "arn:aws:iam::567579488761:role/balena-os-deploy-s3-access-Role-8r0SXqfzgolr" #TODO - Replace using environments
+      aws_region:
+        description: AWS region
+        required: false
+        type: string
+        default: "us-east-1"
 
 # https://docs.github.com/en/actions/using-jobs/using-concurrency
 concurrency:
@@ -444,12 +454,16 @@ jobs:
       #     access_key: ${{ secrets.AWS_ACCESS_KEY_ID || secrets.S3_SECRET_KEY }}
       #     secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY || secrets.S3_ACCESS_KEY }}
      
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
+      # https://github.com/aws-actions/configure-aws-credentials
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@e3dd6a429d7300a6a4c196c26e071d42e0343502 # v4.0.2
         with:
-          aws-region: us-east-1 # Our role seems to be in us-east-1, this is a required parameter
-          role-to-assume: arn:aws:iam::567579488761:role/balena-os-deploy-s3-access-Role-8r0SXqfzgolr
-                  
+          role-to-assume: ${{ inputs.aws_iam_role }}
+          role-session-name: github-${{ github.job }}-${{ github.run_id }}-${{ github.run_attempt }}
+          aws-region: ${{ inputs.aws_region }}
+          # https://github.com/orgs/community/discussions/26636#discussioncomment-3252664
+          mask-aws-account-id: false
+
       #"If no keys are provided, but an IAM role is associated with the EC2 instance, it will be used transparently".
       - name: Deploy to S3
         if: inputs.deploy-s3 == true && steps.balena-lib.outputs.deploy_artifact != 'docker-image'
