remove du of cache
Change-type: patch
Signed-off-by: Ryan Cooke <ryan@balena.io>

--- a/.github/workflows/yocto-build-deploy.yml
+++ b/.github/workflows/yocto-build-deploy.yml
@@ -355,7 +355,7 @@ jobs:
           #   exit 1
           # fi
 
-          du -cksh shared/yocto-cache/$(whoami)/*
+          #du -cksh shared/yocto-cache/$(whoami)/*
 
       # TODO: pre-install on self-hosted-runners
       - name: Install zip package
