seperate build and deploy workflows
Change-type: patch
Signed-off-by: Ryan Cooke <ryan@balena.io>

--- a/.github/workflows/flowzone.yml
+++ b/.github/workflows/flowzone.yml
@@ -32,9 +32,9 @@ jobs:
       bake_targets: yocto-build-env,balena-push-env
 
   # depends on Flowzone having already published the helper images
-  yocto-build-deploy:
-    name: Yocto
-    uses: ./.github/workflows/yocto-build-deploy.yml
+  yocto-build:
+    name: Yocto-build
+    uses: ./.github/workflows/yocto-build.yml
     needs: flowzone
     secrets: inherit
     with:
@@ -44,9 +44,28 @@ jobs:
       device-repo-ref: master
       yocto-scripts-ref: ${{ github.event.pull_request.head.sha || github.sha }}
       machine: generic-amd64
+      sign-image: false
+      os-dev: false
+
+  # depends on the build job having already published the helper images
+  # In here now for testing - we actually want this to be used on device repos on the creation of a new version tag (or PR merge)
+  yocto-deploy:
+    name: Deploy
+    uses: ./.github/workflows/yocto-deploy.yml
+    needs: yocto-build
+    secrets: inherit
+    with:
+      # runs-on: '[ "ubuntu-latest" ]'
+      environment: staging
+      device-repo: balena-os/balena-generic
+      yocto-scripts-ref: ${{ github.event.pull_request.head.sha || github.sha }}
+      machine: generic-amd64
       deploy-s3: true
       deploy-hostapp: true
       deploy-ami: true
       sign-image: false
       os-dev: false
       deploy-esr: false
+      device_slug: ${{ needs.yocto-build.outputs.device_slug }}
+      os_version: ${{ needs.yocto-build.outputs.os_version }}
+      is_private: ${{ needs.yocto-build.outputs.is_private }}
